Update environment variables for Google Maps integration

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 # Google maps api key
-GOOGLE_MAPS_API_KEY=''
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=''
+
+# Google map id
+NEXT_PUBLIC_GOOGLE_MAP_ID=''
 
 # API Base url
 API_BASE=''
