--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@vis.gl/react-google-maps": "^1.5.2",
+    "dayjs": "^1.11.13",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
